[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/poketch_face_blue.png" type="Texture" id=1]
[ext_resource path="res://assets/poketch_texture.png" type="Texture" id=2]
[ext_resource path="res://assets/poketch_bottom_button.png" type="Texture" id=3]
[ext_resource path="res://assets/poketch_top_button.png" type="Texture" id=4]
[ext_resource path="res://assets/poketch_top_button_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/poketch_bottom_button_pressed.png" type="Texture" id=6]
[ext_resource path="res://scenes/WatchTest_Main.gd" type="Script" id=7]
[ext_resource path="res://assets/poketch_black_screen.png" type="Texture" id=8]
[ext_resource path="res://sounds/poketch_button_beep.mp3" type="AudioStream" id=9]

[node name="Main" type="Node2D"]
script = ExtResource( 7 )

[node name="WatchTest" type="Node2D" parent="."]
position = Vector2( 128, 96 )

[node name="WatchFace" type="Sprite" parent="WatchTest"]
texture = ExtResource( 1 )

[node name="PoketchTexture" type="Sprite" parent="WatchTest"]
position = Vector2( 111.25, -2.5 )
scale = Vector2( 1.01515, 7.25 )
texture = ExtResource( 2 )

[node name="PoketchBottomButton" type="Sprite" parent="WatchTest"]
visible = false
position = Vector2( 112, 31.4993 )
texture = ExtResource( 3 )

[node name="PoketchTopButton" type="Sprite" parent="WatchTest"]
visible = false
position = Vector2( 111.994, -31.4926 )
texture = ExtResource( 4 )

[node name="PoketchTopButton2" type="TextureButton" parent="WatchTest"]
margin_left = 95.9884
margin_top = -63.0076
margin_right = 127.988
margin_bottom = -0.00759125
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="PoketchBottomButton2" type="TextureButton" parent="WatchTest"]
margin_left = 95.706
margin_top = 0.00340271
margin_right = 127.706
margin_bottom = 63.0034
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )

[node name="BlackScreenTop" type="Sprite" parent="WatchTest"]
position = Vector2( -112, -80 )
z_index = 2
texture = ExtResource( 8 )
centered = false

[node name="BlackScreenBottom" type="Sprite" parent="WatchTest"]
position = Vector2( -111.961, 80 )
scale = Vector2( 1, -1 )
z_index = 2
texture = ExtResource( 8 )
centered = false

[node name="Timer" type="Timer" parent="WatchTest"]
wait_time = 0.5
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="WatchTest"]
stream = ExtResource( 9 )

[node name="Bar" type="Control" parent="WatchTest"]
margin_left = -128.0
margin_top = -96.0
margin_right = 128.0
margin_bottom = -82.0

[node name="IntroTimer" type="Timer" parent="WatchTest"]
wait_time = 0.4
one_shot = true

[connection signal="pressed" from="WatchTest/PoketchTopButton2" to="." method="_on_PoketchTopButton2_pressed"]
[connection signal="pressed" from="WatchTest/PoketchBottomButton2" to="." method="_on_PoketchBottomButton2_pressed"]
[connection signal="timeout" from="WatchTest/Timer" to="." method="_on_Timer_timeout"]
[connection signal="gui_input" from="WatchTest/Bar" to="." method="_on_Control_gui_input"]
[connection signal="timeout" from="WatchTest/IntroTimer" to="." method="_on_IntroTimer_timeout"]
